fix spacing on contact us page

--- a/theme/assets/css/src/blocks/_office-info.scss
+++ b/theme/assets/css/src/blocks/_office-info.scss
@@ -1,46 +1,48 @@
 main {
-	.office-info {
-		margin-top: 40px;
-		margin-left: 10px;
+	.wp-block-column {
+		.office-info {
+			margin-top: 40px;
+			margin-left: 10px;
 
-		@include breakpoint(phone) {
-			margin-left: 45px;
-		}
-
-		h3 {
-			margin-bottom: 0;
-			margin-top: 32px;
-
-			&::before {
-				content: '';
-				background-repeat: no-repeat;
-				display: inline-block;
-				background-size: contain;
-				height: 40px;
-				width: 50px;
-				margin-left: -40px;
-				margin-bottom: -14px;
+			@include breakpoint(phone) {
+				margin-left: 45px;
 			}
 
-			& + p {
-				margin-top: 0;
-				margin-left: 10px;
-			}
+			h3 {
+				margin-bottom: 0;
+				margin-top: 32px;
 
-			&.email::before {
-				background-image: url(../images/office/email.svg);
-			}
+				&::before {
+					content: '';
+					background-repeat: no-repeat;
+					display: inline-block;
+					background-size: contain;
+					height: 40px;
+					width: 50px;
+					margin-left: -40px;
+					margin-bottom: -14px;
+				}
 
-			&.hours::before {
-				background-image: url(../images/office/hours.svg);
-			}
+				& + p {
+					margin-top: 0;
+					margin-left: 10px;
+				}
 
-			&.location::before {
-				background-image: url(../images/office/location.svg);
-			}
+				&.email::before {
+					background-image: url(../images/office/email.svg);
+				}
 
-			&.phone::before {
-				background-image: url(../images/office/phone.svg);
+				&.hours::before {
+					background-image: url(../images/office/hours.svg);
+				}
+
+				&.location::before {
+					background-image: url(../images/office/location.svg);
+				}
+
+				&.phone::before {
+					background-image: url(../images/office/phone.svg);
+				}
 			}
 		}
 	}
